# IO_QML

./: CMakeLists.txt  Chats.qml  LogPage.qml  Main.qml  README.md  TgChats.qml  global_tg_value.cpp  global_tg_value.h  main.cpp  mfrag.frag  qtgchathistory.cpp  qtgchathistory.h  tg_chatslistmodel.cpp  tg_chatslistmodel.h  tg_controller_qt.cpp  tg_controller_qt.h  tg_peson_qt.cpp  tg_peson_qt.h  tg_while_handler_qt.cpp  tg_while_handler_qt.h
